--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
 
   <body>
     <div class="container">
+      <% flash.each do |name, msg| %>
+      <div id="flash" class='alert alert-<%= "#{name}" %>'>
+        <a href="#" class="close" data-dismiss='alert'>&#215;</a>
+        <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+      </div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
