--- a/lib/templates/erb/scaffold/new.html.erb
+++ b/lib/templates/erb/scaffold/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New <%= singular_table_name.titleize %></h1>
+<section class="row">
+	<h1>New <%= singular_table_name.titleize %></h1>
 
-<%%= render 'form', <%= singular_table_name %>: @<%= singular_table_name %> %>
+	<%%= render 'form', <%= singular_table_name %>: @<%= singular_table_name %> %>
 
-<%%= link_to 'Back', <%= index_helper %>_path %>
+	<%%= link_to 'Back', <%= index_helper %>_path %>
+</section>
