--- a/lib/templates/erb/scaffold/show.html.erb
+++ b/lib/templates/erb/scaffold/show.html.erb
@@ -1,9 +1,11 @@
-<% attributes.reject(&:password_digest?).each do |attribute| -%>
-<p>
-  <strong><%= attribute.human_name %>:</strong>
-  <%%= @<%= singular_table_name %>.<%= attribute.name %> %>
-</p>
+<section class="row">
+	<% attributes.reject(&:password_digest?).each do |attribute| -%>
+	<p>
+	  <strong><%= attribute.human_name %>:</strong>
+	  <%%= @<%= singular_table_name %>.<%= attribute.name %> %>
+	</p>
 
-<% end -%>
-<%%= link_to 'Edit', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>) %> |
-<%%= link_to 'Back', <%= index_helper %>_path %>
+	<% end -%>
+	<%%= link_to 'Edit', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>) %> |
+	<%%= link_to 'Back', <%= index_helper %>_path %>
+</section>
