--- a/lib/templates/erb/scaffold/show.html.erb
+++ b/lib/templates/erb/scaffold/show.html.erb
@@ -1,8 +1,8 @@
 <section class="row">
 	<% attributes.reject(&:password_digest?).each do |attribute| -%>
 	<p>
-	  <strong><%= attribute.human_name %>:</strong>
-	  <%%= @<%= singular_table_name %>.<%= attribute.name %> %>
+	  <div class="col-sm-3"><%= attribute.human_name %>:</div>
+	  <div class="col-sm-9"><%%= @<%= singular_table_name %>.<%= attribute.name %> %></div>
 	</p>
 
 	<% end -%>
